TEST/EXCEPT-tests/symbol_length_test_30max.errout.GOLD
/workspaces/PNut-TS/TEST/EXCEPT-tests/symbol_length_test_30max.spin2:28:error:Symbol exceeds 30 characters
